k8s/gitlab/kustomize/gitlab/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitlab-ssh
  namespace: gitlab
spec:
  type: NodePort
  ports:
  - name: ssh
    port: 22
    nodePort: 30022
    targetPort: ssh
  selector:
    name: gitlab
---
apiVersion: v1
kind: Service
metadata:
  name: gitlab
  namespace: gitlab
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: http
  selector:
    name: gitlab
